--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,5 @@
 spring.application.name=microservicio
 server.port=8080
 
-# === AWS S3 ===
-# o la región que uses
-app.s3.bucket-name=TU_BUCKET_S3
-app.s3.region=us-east-1
-
-# === Azure AD - Resource Server JWT ===
-# Reemplazar TU_TENANT_ID por el ID de tu tenant de Azure
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://sts.windows.net/66ef8059-abaf-4e8b-88d0-1b40ef952b3a/
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://sts.windows.net/12324/
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://login.microsoftonline.com/common/discovery/keys
