changed env properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=microservicio
 server.port=8081
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://sts.windows.net/12324/
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://login.microsoftonline.com/common/discovery/keys
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://sts.windows.net/66ef8059-abaf-4e8b-88d0-1b40ef952b3a/
 
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
+
+app.s3.bucket-name=microservicio-cloud-aleja-uploads
+app.s3.region=us-east-1
