--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,11 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
       - name: Deploy over SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -15,7 +19,22 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            set -e
+
             cd /home/ubuntu/Microservicio_Cloud
+
+            echo "=== Pull latest code ==="
+            git reset --hard
+            git clean -fd
             git pull
+
+            echo "=== Docker status ==="
+            docker --version
+            docker-compose --version
+
+            echo "=== Recreate containers ==="
+            docker-compose -f docker-compose.yaml down
             docker-compose -f docker-compose.yaml up -d --build
-            docker-compose ps
+
+            echo "=== Running containers ==="
+            docker-compose -f docker-compose.yaml ps
